--- a/sidebar.html
+++ b/sidebar.html
@@ -18,9 +18,11 @@
 
 <body>
 
+  <!-- Done -->
   <div class="menu-btn">
     <i class="fas fa-bars"></i>
   </div>
+
 
   <div class="side-bar">
     <div class="close-btn">
