--- a/index.html
+++ b/index.html
@@ -83,33 +83,33 @@
 
 
     <div class="menu">
-      <div class="item"><a href="#"><i class="fas fa-desktop"> </i>Home</a></div>
-      <div class="item"><a href="#"><i class="fas fa-desktop"> </i>Apply</a></div>
+      <div class="item"><a href="./index.html"><i class="fas fa-home"> </i>Home</a></div>
+      <div class="item"><a href="./admission.html"><i class="fas fa-file"> </i>Apply</a></div>
       <div class="item">
-        <a class="sub-btn"><i class="fas fa-table"> </i>School Life <i class="fas fa-angle-right dropdown"></i></a>
+        <a class="sub-btn"><i class="fas fa-child"> </i>School Life <i class="fas fa-angle-right dropdown"></i></a>
         <div class="sub-menu">
-          <a href="#" class="sub-item">Gallery</a>
+          <a href="./gallery.html" class="sub-item">Gallery</a>
         </div>
       </div>
       <div class="item">
         <a class="sub-btn"><i class="fas fa-cogs"> </i>General <i class="fas fa-angle-right dropdown"></i></a>
         <div class="sub-menu">
-          <a href="#" class="sub-item">Notice Board</a>
-          <a href="#" class="sub-item">Study Material</a>
-          <a href="#" class="sub-item">School Wall of Fame</a>
-          <a href="#" class="sub-item">School News</a>
+          <a href="./notice.html" class="sub-item">Notice Board</a>
+          <a href="./library.html" class="sub-item">Study Material</a>
+          <a href="./wall-of-fame.html" class="sub-item">School Wall of Fame</a>
+          <a href="./blog.html" class="sub-item">School News</a>
         </div>
       </div>
       <div class="item">
-        <a class="sub-btn"><i class="fas fa-cogs"> </i>About <i class="fas fa-angle-right dropdown"></i></a>
+        <a class="sub-btn"><i class="fas fa-info-circle"></i>About <i class="fas fa-angle-right dropdown"></i></a>
         <div class="sub-menu">
-          <a href="#" class="sub-item">Our School</a>
-          <a href="#" class="sub-item">Our Staff</a>
-          <a href="#" class="sub-item">Our Alumni</a>
-          <a href="#" class="sub-item">Our Sponsors</a>
+          <a href="./about.html" class="sub-item">Our School</a>
+          <a href="./staff.html" class="sub-item">Our Staff</a>
+          <a href="./alumni.html" class="sub-item">Our Alumni</a>
+          <a href="./all-sponsors.html" class="sub-item">Our Sponsors</a>
         </div>
       </div>
-      <div class="item"><a href="#"><i class="fas fa-info-circle"> </i>Contact</a></div>
+      <div class="item"><a href="#"><i class="fas fa-address-book"></i>Contact</a></div>
     </div>
 
   </aside>
@@ -421,38 +421,17 @@
     </div>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
-  <script>
-    AOS.init({
-      offset: 200,
-      duration: 600,
-      once: false,
-      mirror: false,
-      easing: 'ease-in-out',
-    });
-  </script>
-
+  <!-- jQuery  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+  <!-- Bootstrap  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 
-  <script>
-    $(document).ready(function () {
+  <!-- Animate On Scroll -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
-      // jQuery for Toggle and Sub Menus
-
-      $('.sub-btn').click(function () {
-        $(this).next('.sub-menu').slideToggle();
-        $(this).find('.dropdown').toggleClass('rotate-90');
-      });
-
-
-      // jQuery for Expand and Collapse the Sidebar [aside]
-    });
-  </script>
-
-
+  <!-- Custom Script -->
   <script src="./js/main.js"></script>
 
 
