--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
+      <a href="./sponsor.html" class="sponsor-btn">Sponsor Us</a>
       <a href="./login.html" class="btn login-btn">Log In</a>
     </div>
   </header>
@@ -113,6 +114,7 @@
     </div>
 
   </aside>
+
 
   <!-- Admission: Call-to-Action -->
 
