--- a/sponsor.html
+++ b/sponsor.html
@@ -108,7 +108,7 @@
           <a href="./all-sponsors.html" class="sub-item">Our Sponsors</a>
         </div>
       </div>
-      <div class="item"><a href="#"><i class="fas fa-address-book"></i>Contact</a></div>
+      <div class="item"><a href="./contact.html"><i class="fas fa-address-book"></i>Contact</a></div>
     </div>
 
   </aside>
