--- a/gallery.html
+++ b/gallery.html
@@ -112,7 +112,7 @@
           <a href="./all-sponsors.html" class="sub-item">Our Sponsors</a>
         </div>
       </div>
-      <div class="item"><a href="#"><i class="fas fa-address-book"></i>Contact</a></div>
+      <div class="item"><a href="./contact.html"><i class="fas fa-address-book"></i>Contact</a></div>
     </div>
 
   </aside>
@@ -312,6 +312,9 @@
 
   <!-- jQuery  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Fancy Box [Image Gallery Effect] -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 
   <!-- Bootstrap  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
