--- a/staff.html
+++ b/staff.html
@@ -109,7 +109,7 @@
           <a href="./all-sponsors.html" class="sub-item">Our Sponsors</a>
         </div>
       </div>
-      <div class="item"><a href="#"><i class="fas fa-address-book"></i>Contact</a></div>
+      <div class="item"><a href="./contact.html"><i class="fas fa-address-book"></i>Contact</a></div>
     </div>
 
   </aside>
@@ -357,18 +357,16 @@
     </div>
   </footer>
 
+  <!-- jQuery  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Bootstrap  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
+  <!-- Animate On Scroll -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
-  <script>
-    AOS.init({
-      offset: 200,
-      duration: 600,
-      once: false,
-      mirror: false,
-      easing: 'ease-in-out',
-    });
-  </script>
-
+  <!-- Custom Script -->
   <script src="./js/main.js"></script>
 
 </body>
