Add Student From Added

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
         quisquam odit. Sint, inventore.</p>
       <div>
         <a data-aos="fade-up" href="./admission.html" class="btn">Admission</a>
+        <a data-aos="fade-up" href="./admission.html" class="btn">School Mobile App</a>
+        <a data-aos="fade-up" href="./admission.html" class="btn">Our Team</a>
+        <a data-aos="fade-up" href="./admission.html" class="btn">Digital Library</a>
       </div>
     </div>
   </section>
